--- a/jira/package.json
+++ b/jira/package.json
@@ -9,10 +9,10 @@
     "@types/react-dom": "17.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "4.3.2"
+    "react-scripts": "4.0.3"
   },
   "devDependencies": {
+    "typescript": "^4.3.2",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4"
   }
