--- a/jira/package.json
+++ b/jira/package.json
@@ -2,6 +2,9 @@
   "name": "jira",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "json-server": "json-server __json_server_mock__/db.json --watch"
+  },
   "dependencies": {
     "@types/jest": "26.0.23",
     "@types/node": "15.6.1",
@@ -12,8 +15,9 @@
     "react-scripts": "4.0.3"
   },
   "devDependencies": {
-    "typescript": "^4.3.2",
     "@commitlint/cli": "^12.1.4",
-    "@commitlint/config-conventional": "^12.1.4"
+    "@commitlint/config-conventional": "^12.1.4",
+    "husky": "^6.0.0",
+    "typescript": "^4.3.2"
   }
 }
