--- a/jira/package.json
+++ b/jira/package.json
@@ -76,7 +76,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "json-server":"json-server ./__json_server_mock__/db.json --watch --port 3001"
   },
   "eslintConfig": {
     "extends": [
