--- a/jira/package.json
+++ b/jira/package.json
@@ -68,7 +68,7 @@
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
-    "typescript": "^4.1.2",
+    "typescript": "4.2.2",
     "url-loader": "4.1.1",
     "web-vitals": "^1.0.1",
     "webpack": "4.44.2",
@@ -80,7 +80,9 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "json-server": "json-server ./__json_server_mock__/db.json --watch --port 3001"
+    "json-server": "json-server ./__json_server_mock__/db.json --watch --port 3001 --middlewares ./__json_server_mock__/middleware.js",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "eslintConfig": {
     "extends": [
@@ -160,6 +162,17 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
-    "json-server": "^0.16.2"
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/react": "^6.2.9",
+    "@testing-library/react-hooks": "^7.0.0",
+    "json-server": "^0.16.2",
+    "msw": "^0.29.0",
+    "jira-dev-tool": "^1.7.61"
+
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
