--- a/jira/package.json
+++ b/jira/package.json
@@ -169,8 +169,7 @@
     "@testing-library/react-hooks": "^7.0.0",
     "json-server": "^0.16.2",
     "msw": "^0.29.0",
-    "jira-dev-tool": "^1.7.61"
-
+    "jira-dev-tool": "1.6.59"
   },
   "msw": {
     "workerDirectory": "public"
